@@ -1,5 +1,8 @@
 == 0.6.1 (in git)
 
+ === New Features
+  * Add a NullStrategy which is now the default strategy. (GH-6 Ben Mabey)
+
  === Bugfixes
   * Exclude database views from tables_to_truncate, if the connection adapter
     supports reading from the ANSI standard information_schema views. (GH-25 Samer Abukhait)
